// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorObserver Snapshot ErrorObserver 1`] = `
<Text>
  Loading
</Text>
`;

exports[`ErrorObserver Snapshot ErrorObserver after complete rendering 1`] = `
<View
  styles={Object {}}
>
  <Text
    style={
      Array [
        undefined,
        undefined,
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`ErrorObserver Snapshot ErrorObserver after complete rendering with child as function 1`] = `
<View
  styles={Object {}}
>
  <Text
    style={
      Array [
        undefined,
        undefined,
      ]
    }
  >
    Hello
  </Text>
</View>
`;

exports[`ErrorObserver Snapshot ErrorObserver after complete rendering with error 1`] = `
<View
  styles={Object {}}
>
  <Text
    style={
      Array [
        undefined,
        undefined,
      ]
    }
  >
    Error
  </Text>
</View>
`;
